# BlackSwanGPT

./: README.md  pyproject.toml  run.sh
blackswangpt/: gpt.py  main.py  news.py
